# guide

./: .pre-commit-config.yaml  LICENSE  README.md
guide/: package.xml  setup.cfg  setup.py
guide_core/: package.xml  setup.cfg  setup.py
guide_core/config/: init.yaml
guide_core/dummy_scene/: scene.py
guide_core/dummy_scene/config/: init.yaml
guide_core/guide_core/core/: _registry.py  backup_registry.py  guide_simulator.py  isaac_manager.py  recorder_manager.py  runtime.py
guide_core/guide_core/core/commands/: _cmd_clash.py  _cmd_prims.py  _cmd_robot.py  _cmd_simulator.py  _cmd_stage.py
guide_core/guide_core/ros/: guide_ros.py
guide_core/guide_core/scene/: scene_manager.py  scene_orchestrator.py  scene_recorder.py
guide_core/guide_core/types/: conversion.py  geometry.py  scene_state.py
guide_core/launch/: bringup.launch.py  isaac_sim.launch.py
guide_core/test/: conftest.py  mock_backend.py  test_import_and_bind.py  test_isaac_manager.py  test_manager.py  test_manager_perf.py  test_manager_thread.py  test_mp.py  test_plan.py  test_registration_mock.py  test_registry.py  test_runtime_command_queue.py  test_runtime_facade.py
guide_exo/: package.xml  setup.cfg  setup.py
guide_exo/guide_exo/core/: base_node.py  composite_node.py  readme.md  states.py
guide_exo/guide_exo/sequences/: readme.md
guide_exo/guide_exo/steps/: readme.md
guide_exo/guide_exo/steps/end_effector/: gripper_control.py
guide_exo/guide_exo/steps/manipulation/: cartesian_move.py  joint_move.py
guide_exo/guide_exo/steps/simulation/isaac/: prim.py
guide_exo/guide_exo/steps/utility/: exception.py  pose.py  wait.py
guide_exo/guide_exo/subtasks/: readme.md
guide_exo/guide_exo/tasks/: readme.md
guide_msgs/: CMakeLists.txt  package.xml
guide_msgs/srv/: Randomize.srv  RegisterScene.srv  StopRecording.srv
guide_tasks/block_bin/: README.md  package.xml  setup.cfg  setup.py
guide_tasks/block_bin/assets/: backup_block_bin.usd
guide_tasks/block_bin/block_bin/: scene.py  solve_task.py
guide_tasks/block_bin/config/: init.yaml  randomize.yaml  reset.yaml  success.yaml
guide_tasks/block_bin/launch/: bringup.launch.py
