<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guide</name>
  <version>1.0.0</version>
  <description>GUIDE Framework metapackage</description>
  <maintainer email="makany.andras@uni-obuda.hu">András Makány</maintainer>
  <license>GPL-3.0-only</license>

  <depend>guide_core</depend>
  <depend>guide_exo</depend>
  <depend>guide_msgs</depend>
  <depend>block_bin</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
