<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guide_exo</name>
  <version>0.1.0</version>
  <description>GUIDE-EXO is a framework for high level task specification and execution for robots.</description>
  <maintainer email="makany.andras@uni-obuda.hu">András Makány</maintainer>
  <license>GPL-3.0-only</license>

  <depend>guide_core</depend>
  <depend>guide_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
